unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/iContactforSF__iContact_Message_Statistic__c.object-meta.xml
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelp</customHelpPage>
    <description>Contains the statistics for an individual message recipient from iContact.</description>
    <label>iContact Message Statistic</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Message Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>