unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Bounced__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Bounced__c</fullName>
    <description>If this recipient's email bounced, this field contains the date/time of the latest bounce.</description>
    <inlineHelpText>If this recipient's email bounced, this field contains the date/time of the latest bounce.</inlineHelpText>
    <label>Bounced Date</label>
    <type>DateTime</type>
</CustomField>