unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Clicks__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of time this contact clicked a link in the message.</description>
    <inlineHelpText>Number of time this contact clicked a link in the message.</inlineHelpText>
    <label>Total Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>