unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Contact__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the campaign member this statistic is for was from a Contact, this field will hold the ID of the Contact.</description>
    <inlineHelpText>If the campaign member this statistic is for was from a Contact, this field will hold the ID of the Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>iContact Message Statistic</relationshipLabel>
    <relationshipName>iContact_Message_Statistic</relationshipName>
    <type>Lookup</type>
</CustomField>