unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__iContact_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__iContact_Sent_Message__c</fullName>
    <description>The message this statistic is from.</description>
    <inlineHelpText>The message this statistic is from.</inlineHelpText>
    <label>iContact Sent Message</label>
    <referenceTo>iContactforSF__iContact_Sent_Message__c</referenceTo>
    <relationshipLabel>iContact Message Statistic</relationshipLabel>
    <relationshipName>iContact_Message_Statistic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>