unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Lead__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the campaign member this statistic is for was from a Lead, this field will hold the ID of the Lead.</description>
    <inlineHelpText>If the campaign member this statistic is for was from a Lead, this field will hold the ID of the Lead.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>iContact Message Statistic</relationshipLabel>
    <relationshipName>iContact_Message_Statistic</relationshipName>
    <type>Lookup</type>
</CustomField>