unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Opened__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Opened__c</fullName>
    <description>If this recipient opened the email, this field contains the date/time of the latest open.</description>
    <inlineHelpText>If this recipient opened the email, this field contains the date/time of the latest open.</inlineHelpText>
    <label>Last Opened</label>
    <type>DateTime</type>
</CustomField>