unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Opens__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Opens__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of time this contact opened the message.</description>
    <inlineHelpText>Number of time this contact opened the message.</inlineHelpText>
    <label>Total Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>