unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/iContactforSF__Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Unsubscribed__c</fullName>
    <description>If this recipient unsubscribed, this field contains the date/time of the unsubscribe.</description>
    <inlineHelpText>If this recipient unsubscribed, this field contains the date/time of the unsubscribe.</inlineHelpText>
    <label>Unsubscribed Date</label>
    <type>DateTime</type>
</CustomField>