unpackaged/main/default/objects/iContactforSF__iContact_Message_Statistic__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Heller created 2021</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>